--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "postinstall": "node -e \"try { require('fs').mkdirSync('./public', { recursive: true }); } catch (e) {}\""
   },
   "keywords": [],
   "author": "",
