--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 DB_HOST=myshaa.com
 DB_PORT=3306
 DB_USER=myshaa_kabu
-DB_PASSWORD=T-Cyj;f5g1y6
+DB_PASSWORD='T-Cyj;f5g1y6'
 DB_NAME=myshaa_kabu
 
 # Email Configuration
