--- a/.env
+++ b/.env
@@ -16,3 +16,23 @@ JWT_SECRET=21321esaendjnasjdasjdnjasbndjqwbeijn2jebjbjbjnjnj
 
 # Server Configuration
 PORT=3000
+
+render ip
+
+# 34.74.114.138
+# 34.74.183.115
+# 34.75.204.188
+# 34.75.111.41
+
+#  Steps to Add Render IPs to Your DB Host (e.g. cPanel/Remote MySQL):
+# Log in to your hosting provider (e.g., cPanel).
+
+# Search for “Remote MySQL” or similar option.
+
+# In “Add Access Host” field:
+
+# Paste Render’s outbound IPs, one by one.
+
+
+# Click "Add Host" after entering each IP.
+# Click "Add Host" after entering each IP.
